--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,9 @@
 .page-content {
   flex: 1;
   background-color: #f5f3f0;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .chat-container {
@@ -19,6 +22,12 @@
   display: flex;
   flex-direction: column;
   background-color: #f5f3f0;
+}
+
+.chat-interface {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .close-chat-btn {
